src/objects/BookingSystemSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings for Booking System Integration</description>
    <fields>
        <fullName>AccountPath__c</fullName>
        <label>AccountPath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthPath__c</fullName>
        <label>AuthCodePath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthenticationPathClient__c</fullName>
        <label>AuthenticationPathClient</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthenticationPath__c</fullName>
        <label>AuthenticationPath</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookingPluginPath__c</fullName>
        <label>BookingPluginPath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendarPath__c</fullName>
        <label>CalendarPath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <description>OAUTH2 Client Id for CCI. This will be updated by CCI on a regular basis.</description>
        <externalId>true</externalId>
        <label>ClientId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConceptValuePath__c</fullName>
        <label>ConceptValuePath</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>ContentType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPath__c</fullName>
        <label>CustomerPath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EditBookingPluginPath__c</fullName>
        <label>EditBookingPluginPath</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinimumTokenValidity__c</fullName>
        <description>Represents the user defined time in seconds that the token should be valid for.</description>
        <inlineHelpText>Please enter a value in seconds</inlineHelpText>
        <label>Minimum Token Validity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderPath__c</fullName>
        <label>OrderPath</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackagePath__c</fullName>
        <label>PackagePath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductKeyPath__c</fullName>
        <label>ProductKeyPath</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadTimeout__c</fullName>
        <defaultValue>60000</defaultValue>
        <description>Read Timeout for Salesforce to wait for a response from a Third Party</description>
        <label>ReadTimeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceUserGroup__c</fullName>
        <description>CCI Service User Group Name</description>
        <label>Service User Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceUserMailProfile__c</fullName>
        <description>CCI Mail Profile Name</description>
        <label>Service User Mail Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceUserMetroProfile__c</fullName>
        <description>CCI Service User Metro profile name.</description>
        <label>Service User Metro Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceUserName__c</fullName>
        <description>CCI Service User Name</description>
        <label>Service User Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharedSecret__c</fullName>
        <description>OAUTH2 Shared Secret for CCI. This will be updated by CCI on a regular basis.</description>
        <label>SharedSecret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempDomain__c</fullName>
        <description>Should be removed for Production</description>
        <label>TempDomain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserGroupPath__c</fullName>
        <label>UserGroupPath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserProfilePath__c</fullName>
        <label>UserProfilePath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>BookingSystemSettings</label>
</CustomObject>